Ticket #12896 (closed defect: fixed)

Opened 2 years ago

Last modified 2 years ago

build fix for png-1.5

Reported by: wiz Owned by:
Priority: normal Milestone:
Component: base Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

png-1.5 finally completely deprecated the "voidp" symbol. It's used in src/common/imagpng.cpp and should just be removed.

Attachments

wx-png-1.5.diff download (497 bytes) - added by wiz 2 years ago.
Patch fixing the problem.

Change History

Changed 2 years ago by wiz

Patch fixing the problem.

Changed 2 years ago by PC

  • status changed from new to closed
  • resolution set to fixed

(In [66743]) remove deprecated voidp, closes #12896

Note: See TracTickets for help on using tickets.